feat(package): Add linux portable version.